<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline0048v"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintGuide_percent="0.048" />-->

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline0952v"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintGuide_percent="0.952"/>-->

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline0368"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintGuide_percent="0.368" />-->

    <TextView
        android:id="@+id/textViewGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:alpha="0.75"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorText"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGenre" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRatings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewRuntime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/textViewRuntimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewRuntimeLabel" />

    <TextView
        android:id="@+id/textViewRuntimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/runtime"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewReleasedLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewReleasedLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewReleasedLabel" />

    <TextView
        android:id="@+id/textViewReleasedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/released"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewRatings" />

    <TextView
        android:id="@+id/textViewReleased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReleasedLabel" />

    <TextView
        android:id="@+id/textViewDirectorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:text="@string/director"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReleased" />

    <TextView
        android:id="@+id/textViewDirector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDirectorLabel" />

    <TextView
        android:id="@+id/textViewStoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:text="@string/story"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDirector" />

    <TextView
        android:id="@+id/textViewStory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStoryLabel" />

    <TextView
        android:id="@+id/textViewWritersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:text="@string/writers"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStory" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewWriters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWritersLabel" />

    <TextView
        android:id="@+id/textViewCastLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="19dp"
        android:text="@string/cast"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewWriters" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCastLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>